[tool.poetry]
name = "dotfiles-installer"
version = "0.1.0"
description = "Interactive dotfiles configuration installer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "installer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
install-dotfiles = "installer.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88