[tool.poetry]
name = "dotfiles-installer"
version = "0.1.0"
description = "Interactive dotfiles configuration installer"
authors = ["David Lam <david.lam@lamdav.com>"]
readme = "README.md"
packages = [{include = "installer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.16.1"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
install-dotfiles = "installer.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
