[project]
name = "dotfiles-installer"
version = "0.1.0"
description = "Interactive dotfiles configuration installer"
authors = [{name = "David Lam", email = "david.lam@lamdav.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.1",
    "rich>=14.1.0",
]

[project.scripts]
install-dotfiles = "installer.main:app"

[tool.hatch.build.targets.wheel]
packages = ["installer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
